syntax = "proto3";

package character;

service CharacterService {
  rpc GetCharacter(GetCharacterRequest) returns (GetCharacterResponse) {}
  rpc CreateCharacter(CreateCharacterRequest) returns (CreateCharacterResponse) {}
  rpc UpdateCharacter(UpdateCharacterRequest) returns (UpdateCharacterResponse) {}
  rpc DeleteCharacter(DeleteCharacterRequest) returns (DeleteCharacterResponse) {}
}

message GetCharacterRequest {
  string characterId = 1;
}

message GetCharacterResponse {
  string characterId = 1;
  string name = 2;
  string life = 3;
}

message CreateCharacterRequest {
  string name = 1;
}

message CreateCharacterResponse {
  string characterId = 1;
}

message UpdateCharacterRequest {
  string characterId = 1;
  string name = 2;
  string life = 3;
}

message UpdateCharacterResponse {
  string characterId = 1;
  string name = 2;
  string life = 3;
}

message DeleteCharacterRequest {
  string characterId = 1;
}

message DeleteCharacterResponse {
  string characterId = 1;
}